Adding the book detail

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>My awesome training</title>
         <meta name="description" content="training">
         <meta name="author" content="David">
         <link rel="stylesheet" type="text/css" href="application.css">
     </head>
     <body>
-        <h1 class="title">Hello World!</h1>
-        <script src="" async defer></script>
+        <main id="root"></main>
+        <script src="js/view.js" type="text/javascript" async defer></script>
+        <script src="js/controller.js" type="text/javascript" async defer></script>
+       
     </body>
 </html>
